@@ -1,18 +1,20 @@
 package io.stargate.sgv2.jsonapi.service.operation.model.impl;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
+import com.datastax.oss.driver.api.core.cql.AsyncResultSet;
+import com.datastax.oss.driver.api.core.cql.ColumnDefinitions;
+import com.datastax.oss.driver.api.core.cql.Row;
+import com.datastax.oss.driver.api.core.cql.SimpleStatement;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.quarkus.test.junit.QuarkusTest;
 import io.quarkus.test.junit.TestProfile;
+import io.smallrye.mutiny.Uni;
 import io.smallrye.mutiny.helpers.test.UniAssertSubscriber;
-import io.stargate.bridge.grpc.TypeSpecs;
-import io.stargate.bridge.grpc.Values;
-import io.stargate.bridge.proto.QueryOuterClass;
-import io.stargate.sgv2.api.common.config.QueriesConfig;
-import io.stargate.sgv2.common.bridge.AbstractValidatingStargateBridgeTest;
-import io.stargate.sgv2.common.bridge.ValidatingStargateBridge;
 import io.stargate.sgv2.common.testprofiles.NoGlobalResourcesTestProfile;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandContext;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandResult;
@@ -21,27 +23,30 @@ import io.stargate.sgv2.jsonapi.api.model.command.clause.filter.ComparisonExpres
 import io.stargate.sgv2.jsonapi.api.model.command.clause.filter.LogicalExpression;
 import io.stargate.sgv2.jsonapi.api.model.command.clause.update.UpdateOperator;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.QueryExecutor;
-import io.stargate.sgv2.jsonapi.service.cqldriver.serializer.CustomValueSerializers;
+import io.stargate.sgv2.jsonapi.service.cqldriver.serializer.CQLBindValues;
 import io.stargate.sgv2.jsonapi.service.operation.model.ReadType;
 import io.stargate.sgv2.jsonapi.service.projection.DocumentProjector;
 import io.stargate.sgv2.jsonapi.service.shredding.Shredder;
 import io.stargate.sgv2.jsonapi.service.shredding.model.DocValueHasher;
-import io.stargate.sgv2.jsonapi.service.shredding.model.DocumentId;
 import io.stargate.sgv2.jsonapi.service.shredding.model.WritableShreddedDocument;
 import io.stargate.sgv2.jsonapi.service.testutil.DocumentUpdaterUtils;
+import io.stargate.sgv2.jsonapi.service.testutil.MockAsyncResultSet;
+import io.stargate.sgv2.jsonapi.service.testutil.MockRow;
 import io.stargate.sgv2.jsonapi.service.updater.DocumentUpdater;
 import jakarta.inject.Inject;
+import java.nio.ByteBuffer;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
+import java.util.stream.Stream;
 import org.apache.commons.lang3.RandomStringUtils;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 @QuarkusTest
-@Disabled
 @TestProfile(NoGlobalResourcesTestProfile.Impl.class)
-public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateBridgeTest {
+public class ReadAndUpdateOperationRetryTest extends OperationTestBase {
   private static final String KEYSPACE_NAME = RandomStringUtils.randomAlphanumeric(16);
   private static final String COLLECTION_NAME = RandomStringUtils.randomAlphanumeric(16);
   private static final CommandContext COMMAND_CONTEXT =
@@ -49,8 +54,45 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
 
   @Inject Shredder shredder;
   @Inject ObjectMapper objectMapper;
-  @Inject QueryExecutor queryExecutor;
-  @Inject QueriesConfig queriesConfig;
+
+  private final ColumnDefinitions KEY_TXID_JSON_COLUMNS =
+      buildColumnDefs(
+          OperationTestBase.TestColumn.keyColumn(),
+          OperationTestBase.TestColumn.ofUuid("tx_id"),
+          OperationTestBase.TestColumn.ofVarchar("doc_json"));
+
+  private MockRow resultRow(ColumnDefinitions columnDefs, int index, Object... values) {
+    List<ByteBuffer> buffers = Stream.of(values).map(value -> byteBufferFromAny(value)).toList();
+    return new MockRow(columnDefs, index, buffers);
+  }
+
+  private MockRow resultRow(int index, String key, UUID txId, String doc) {
+    return new MockRow(
+        KEY_TXID_JSON_COLUMNS,
+        index,
+        Arrays.asList(byteBufferForKey(key), byteBufferFrom(txId), byteBufferFrom(doc)));
+  }
+
+  private final ColumnDefinitions COLUMNS_APPLIED =
+      buildColumnDefs(OperationTestBase.TestColumn.ofBoolean("[applied]"));
+
+  private SimpleStatement nonVectorUpdateStatement(
+      WritableShreddedDocument shredDocument, UUID tx_id) {
+    String updateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+    return SimpleStatement.newInstance(
+        updateCql,
+        CQLBindValues.getSetValue(shredDocument.existKeys()),
+        CQLBindValues.getIntegerMapValues(shredDocument.arraySize()),
+        CQLBindValues.getStringSetValue(shredDocument.arrayContains()),
+        CQLBindValues.getBooleanMapValues(shredDocument.queryBoolValues()),
+        CQLBindValues.getDoubleMapValues(shredDocument.queryNumberValues()),
+        CQLBindValues.getStringMapValues(shredDocument.queryTextValues()),
+        CQLBindValues.getSetValue(shredDocument.queryNullValues()),
+        CQLBindValues.getTimestampMapValues(shredDocument.queryTimestampValues()),
+        shredDocument.docJson(),
+        CQLBindValues.getDocumentIdValue(shredDocument.id()),
+        tx_id);
+  }
 
   // TODO: as part of https://github.com/stargate/jsonapi/issues/214
   //  - non-lwt failure partial, full
@@ -75,6 +117,9 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
 
   @Test
   public void findOneAndUpdateWithRetry() throws Exception {
+    QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+    // read1
     String collectionReadCql =
         "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE array_contains CONTAINS ? LIMIT 1"
             .formatted(KEYSPACE_NAME, COLLECTION_NAME);
@@ -89,135 +134,73 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
         }
         """;
 
-    String doc1Updated =
-        """
-        {
-          "_id": "doc1",
-          "username": "user1",
-          "name" : "test"
-        }
-        """;
-    ValidatingStargateBridge.QueryAssert selectQueryAssert =
-        withQuery(
-                collectionReadCql,
-                Values.of("username " + new DocValueHasher().getHash("user1").hash()))
-            .withPageSize(1)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc1"))),
-                        Values.of(tx_id1),
-                        Values.of(doc1))));
+    SimpleStatement stmt1 =
+        SimpleStatement.newInstance(
+            collectionReadCql, "username " + new DocValueHasher().getHash("user1").hash());
 
+    List<Row> rows1 = Arrays.asList(resultRow(0, "doc1", tx_id1, doc1));
+    AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+    final AtomicInteger selectQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+        .then(
+            invocation -> {
+              selectQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results1);
+            });
+
+    // read2
     collectionReadCql =
         "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE (key = ? AND array_contains CONTAINS ?) LIMIT 1"
             .formatted(KEYSPACE_NAME, COLLECTION_NAME);
 
-    ValidatingStargateBridge.QueryAssert reReadQueryAssert =
-        withQuery(
-                collectionReadCql,
-                Values.of(CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))),
-                Values.of("username " + new DocValueHasher().getHash("user1").hash()))
-            .withPageSize(1)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc1"))),
-                        Values.of(tx_id2),
-                        Values.of(doc1))));
+    SimpleStatement stmt2 =
+        SimpleStatement.newInstance(
+            collectionReadCql,
+            boundKeyForStatement("doc1"),
+            "username " + new DocValueHasher().getHash("user1").hash());
 
-    String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+    List<Row> rows2 = Arrays.asList(resultRow(0, "doc1", tx_id2, doc1));
+    AsyncResultSet results2 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows2, null);
+    final AtomicInteger reReadQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt2), any(), anyInt()))
+        .then(
+            invocation -> {
+              reReadQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results2);
+            });
+
+    // update
+    String doc1Updated =
+        """
+            {
+              "_id": "doc1",
+              "username": "user1",
+              "name" : "test"
+            }
+            """;
     JsonNode jsonNode = objectMapper.readTree(doc1Updated);
     WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+    SimpleStatement stmt3 = nonVectorUpdateStatement(shredDocument, tx_id1);
+    List<Row> rows3 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results3 = new MockAsyncResultSet(COLUMNS_APPLIED, rows3, null);
+    final AtomicInteger failedUpdateQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt3)))
+        .then(
+            invocation -> {
+              failedUpdateQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results3);
+            });
 
-    ValidatingStargateBridge.QueryAssert failedUpdateQueryAssert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id1))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            // `false` in response for LWT indicate failure
-            .returning(List.of(List.of(Values.of(false))));
-
-    ValidatingStargateBridge.QueryAssert updateQueryAssert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id2))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            .returning(List.of(List.of(Values.of(true))));
+    SimpleStatement stmt4 = nonVectorUpdateStatement(shredDocument, tx_id2);
+    List<Row> rows4 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+    AsyncResultSet results4 = new MockAsyncResultSet(COLUMNS_APPLIED, rows4, null);
+    final AtomicInteger updateQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt4)))
+        .then(
+            invocation -> {
+              updateQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results4);
+            });
 
     LogicalExpression implicitAnd = LogicalExpression.and();
     implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -261,10 +244,10 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
             .getItem();
 
     // assert query execution
-    selectQueryAssert.assertExecuteCount().isOne();
-    reReadQueryAssert.assertExecuteCount().isOne();
-    failedUpdateQueryAssert.assertExecuteCount().isOne();
-    updateQueryAssert.assertExecuteCount().isOne();
+    assertThat(selectQueryAssert.get()).isEqualTo(1);
+    assertThat(reReadQueryAssert.get()).isEqualTo(1);
+    assertThat(failedUpdateQueryAssert.get()).isEqualTo(1);
+    assertThat(updateQueryAssert.get()).isEqualTo(1);
 
     // then result
     CommandResult result = execute.get();
@@ -277,6 +260,9 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
 
   @Test
   public void findAndUpdateWithRetryFailure() throws Exception {
+    QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+    // read1
     String collectionReadCql =
         "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE array_contains CONTAINS ? LIMIT 1"
             .formatted(KEYSPACE_NAME, COLLECTION_NAME);
@@ -285,141 +271,79 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
     UUID tx_id2 = UUID.randomUUID();
     String doc1 =
         """
-        {
-          "_id": "doc1",
-          "username": "user1"
-        }
-        """;
+            {
+              "_id": "doc1",
+              "username": "user1"
+            }
+            """;
 
-    String doc1Updated =
-        """
-        {
-          "_id": "doc1",
-          "username": "user1",
-          "name" : "test"
-        }
-        """;
-    ValidatingStargateBridge.QueryAssert selectQueryAssert =
-        withQuery(
-                collectionReadCql,
-                Values.of("username " + new DocValueHasher().getHash("user1").hash()))
-            .withPageSize(1)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc1"))),
-                        Values.of(tx_id1),
-                        Values.of(doc1))));
+    SimpleStatement stmt1 =
+        SimpleStatement.newInstance(
+            collectionReadCql, "username " + new DocValueHasher().getHash("user1").hash());
 
+    List<Row> rows1 = Arrays.asList(resultRow(0, "doc1", tx_id1, doc1));
+    AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+    final AtomicInteger selectQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+        .then(
+            invocation -> {
+              selectQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results1);
+            });
+
+    // read2
     collectionReadCql =
         "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE (key = ? AND array_contains CONTAINS ?) LIMIT 1"
             .formatted(KEYSPACE_NAME, COLLECTION_NAME);
 
-    ValidatingStargateBridge.QueryAssert reReadQueryAssert =
-        withQuery(
-                collectionReadCql,
-                Values.of(CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))),
-                Values.of("username " + new DocValueHasher().getHash("user1").hash()))
-            .withPageSize(1)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc1"))),
-                        Values.of(tx_id2),
-                        Values.of(doc1))));
+    SimpleStatement stmt2 =
+        SimpleStatement.newInstance(
+            collectionReadCql,
+            boundKeyForStatement("doc1"),
+            "username " + new DocValueHasher().getHash("user1").hash());
 
-    String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+    List<Row> rows2 = Arrays.asList(resultRow(0, "doc1", tx_id2, doc1));
+    AsyncResultSet results2 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows2, null);
+    final AtomicInteger reReadQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt2), any(), anyInt()))
+        .then(
+            invocation -> {
+              reReadQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results2);
+            });
+
+    // update
+    String doc1Updated =
+        """
+            {
+              "_id": "doc1",
+              "username": "user1",
+              "name" : "test"
+            }
+            """;
     JsonNode jsonNode = objectMapper.readTree(doc1Updated);
     WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+    SimpleStatement stmt3 = nonVectorUpdateStatement(shredDocument, tx_id1);
+    List<Row> rows3 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results3 = new MockAsyncResultSet(COLUMNS_APPLIED, rows3, null);
+    final AtomicInteger updateFailedQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt3)))
+        .then(
+            invocation -> {
+              updateFailedQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results3);
+            });
 
-    ValidatingStargateBridge.QueryAssert updateFailedQueryAssert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id1))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            // `false` in response for LWT indicate failure
-            .returning(List.of(List.of(Values.of(false))));
-
-    ValidatingStargateBridge.QueryAssert updateRetryFailedQueryAssert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id2))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            .returning(List.of(List.of(Values.of(false))));
+    SimpleStatement stmt4 = nonVectorUpdateStatement(shredDocument, tx_id2);
+    List<Row> rows4 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results4 = new MockAsyncResultSet(COLUMNS_APPLIED, rows4, null);
+    final AtomicInteger updateRetryFailedQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt4)))
+        .then(
+            invocation -> {
+              updateRetryFailedQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results4);
+            });
 
     LogicalExpression implicitAnd = LogicalExpression.and();
     implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -436,6 +360,7 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
             DocumentProjector.identityProjector(),
             ReadType.DOCUMENT,
             objectMapper);
+
     DocumentUpdater documentUpdater =
         DocumentUpdater.construct(
             DocumentUpdaterUtils.updateClause(
@@ -462,10 +387,10 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
             .getItem();
 
     // assert query execution
-    selectQueryAssert.assertExecuteCount().isOne();
-    reReadQueryAssert.assertExecuteCount().isEqualTo(3);
-    updateFailedQueryAssert.assertExecuteCount().isOne();
-    updateRetryFailedQueryAssert.assertExecuteCount().isEqualTo(3);
+    assertThat(selectQueryAssert.get()).isEqualTo(1);
+    assertThat(reReadQueryAssert.get()).isEqualTo(3);
+    assertThat(updateFailedQueryAssert.get()).isEqualTo(1);
+    assertThat(updateRetryFailedQueryAssert.get()).isEqualTo(3);
 
     // then result
     CommandResult result = execute.get();
@@ -486,7 +411,9 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
 
   @Test
   public void findAndUpdateWithRetryFailureWithUpsert() throws Exception {
-    // ensure document is not created
+    QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+    // read1
     String collectionReadCql =
         "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE array_contains CONTAINS ? LIMIT 1"
             .formatted(KEYSPACE_NAME, COLLECTION_NAME);
@@ -495,141 +422,79 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
     UUID tx_id2 = UUID.randomUUID();
     String doc1 =
         """
-        {
-          "_id": "doc1",
-          "username": "user1"
-        }
-        """;
+            {
+              "_id": "doc1",
+              "username": "user1"
+            }
+            """;
 
-    String doc1Updated =
-        """
-        {
-          "_id": "doc1",
-          "username": "user1",
-          "name" : "test"
-        }
-        """;
-    ValidatingStargateBridge.QueryAssert selectQueryAssert =
-        withQuery(
-                collectionReadCql,
-                Values.of("username " + new DocValueHasher().getHash("user1").hash()))
-            .withPageSize(1)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc1"))),
-                        Values.of(tx_id1),
-                        Values.of(doc1))));
+    SimpleStatement stmt1 =
+        SimpleStatement.newInstance(
+            collectionReadCql, "username " + new DocValueHasher().getHash("user1").hash());
 
+    List<Row> rows1 = Arrays.asList(resultRow(0, "doc1", tx_id1, doc1));
+    AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+    final AtomicInteger selectQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+        .then(
+            invocation -> {
+              selectQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results1);
+            });
+
+    // read2
     collectionReadCql =
         "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE (key = ? AND array_contains CONTAINS ?) LIMIT 1"
             .formatted(KEYSPACE_NAME, COLLECTION_NAME);
 
-    ValidatingStargateBridge.QueryAssert reReadQueryAssert =
-        withQuery(
-                collectionReadCql,
-                Values.of(CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))),
-                Values.of("username " + new DocValueHasher().getHash("user1").hash()))
-            .withPageSize(1)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc1"))),
-                        Values.of(tx_id2),
-                        Values.of(doc1))));
+    SimpleStatement stmt2 =
+        SimpleStatement.newInstance(
+            collectionReadCql,
+            boundKeyForStatement("doc1"),
+            "username " + new DocValueHasher().getHash("user1").hash());
 
-    String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+    List<Row> rows2 = Arrays.asList(resultRow(0, "doc1", tx_id2, doc1));
+    AsyncResultSet results2 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows2, null);
+    final AtomicInteger reReadQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt2), any(), anyInt()))
+        .then(
+            invocation -> {
+              reReadQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results2);
+            });
+
+    // update
+    String doc1Updated =
+        """
+            {
+              "_id": "doc1",
+              "username": "user1",
+              "name" : "test"
+            }
+            """;
     JsonNode jsonNode = objectMapper.readTree(doc1Updated);
     WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+    SimpleStatement stmt3 = nonVectorUpdateStatement(shredDocument, tx_id1);
+    List<Row> rows3 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results3 = new MockAsyncResultSet(COLUMNS_APPLIED, rows3, null);
+    final AtomicInteger updateFailedQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt3)))
+        .then(
+            invocation -> {
+              updateFailedQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results3);
+            });
 
-    ValidatingStargateBridge.QueryAssert updateFailedQueryAssert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id1))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            // `false` in response for LWT indicate failure
-            .returning(List.of(List.of(Values.of(false))));
-
-    ValidatingStargateBridge.QueryAssert updateRetryFailedQueryAssert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id2))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            .returning(List.of(List.of(Values.of(false))));
+    SimpleStatement stmt4 = nonVectorUpdateStatement(shredDocument, tx_id2);
+    List<Row> rows4 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results4 = new MockAsyncResultSet(COLUMNS_APPLIED, rows4, null);
+    final AtomicInteger updateRetryFailedQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt4)))
+        .then(
+            invocation -> {
+              updateRetryFailedQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results4);
+            });
 
     LogicalExpression implicitAnd = LogicalExpression.and();
     implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -646,6 +511,7 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
             DocumentProjector.identityProjector(),
             ReadType.DOCUMENT,
             objectMapper);
+
     DocumentUpdater documentUpdater =
         DocumentUpdater.construct(
             DocumentUpdaterUtils.updateClause(
@@ -672,10 +538,10 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
             .getItem();
 
     // assert query execution
-    selectQueryAssert.assertExecuteCount().isOne();
-    reReadQueryAssert.assertExecuteCount().isEqualTo(3);
-    updateFailedQueryAssert.assertExecuteCount().isOne();
-    updateRetryFailedQueryAssert.assertExecuteCount().isEqualTo(3);
+    assertThat(selectQueryAssert.get()).isEqualTo(1);
+    assertThat(reReadQueryAssert.get()).isEqualTo(3);
+    assertThat(updateFailedQueryAssert.get()).isEqualTo(1);
+    assertThat(updateRetryFailedQueryAssert.get()).isEqualTo(3);
 
     // then result
     CommandResult result = execute.get();
@@ -696,6 +562,7 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
 
   @Test
   public void findAndUpdateWithRetryPartialFailure() throws Exception {
+    QueryExecutor queryExecutor = mock(QueryExecutor.class);
     String collectionReadCql =
         "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE array_contains CONTAINS ? LIMIT 3"
             .formatted(KEYSPACE_NAME, COLLECTION_NAME);
@@ -705,200 +572,112 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
     UUID tx_id3 = UUID.randomUUID();
     String doc1 =
         """
-        {
-          "_id": "doc1",
-          "username": "user1",
-          "status" : "active"
-        }
-        """;
+            {
+              "_id": "doc1",
+              "username": "user1",
+              "status" : "active"
+            }
+            """;
 
     String doc2 =
         """
-        {
-          "_id": "doc2",
-          "username": "user2",
-          "status" : "active"
-        }
-        """;
+            {
+              "_id": "doc2",
+              "username": "user2",
+              "status" : "active"
+            }
+            """;
 
     String doc1Updated =
         """
-        {
-          "_id": "doc1",
-          "username": "user1",
-          "status" : "active",
-          "name" : "test"
-        }
-        """;
+            {
+              "_id": "doc1",
+              "username": "user1",
+              "status" : "active",
+              "name" : "test"
+            }
+            """;
 
     String doc2Updated =
         """
-        {
-          "_id": "doc2",
-          "username": "user2",
-          "status" : "active",
-          "name" : "test"
-        }
-        """;
-    ValidatingStargateBridge.QueryAssert selectQueryAssert =
-        withQuery(
-                collectionReadCql,
-                Values.of("status " + new DocValueHasher().getHash("active").hash()))
-            .withPageSize(3)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc1"))),
-                        Values.of(tx_id1),
-                        Values.of(doc1)),
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc2"))),
-                        Values.of(tx_id3),
-                        Values.of(doc2))));
+            {
+              "_id": "doc2",
+              "username": "user2",
+              "status" : "active",
+              "name" : "test"
+            }
+            """;
+
+    SimpleStatement stmt1 =
+        SimpleStatement.newInstance(
+            collectionReadCql, "status " + new DocValueHasher().getHash("active").hash());
+    List<Row> rows1 =
+        Arrays.asList(resultRow(0, "doc1", tx_id1, doc1), resultRow(0, "doc2", tx_id3, doc2));
+    AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+    final AtomicInteger selectQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+        .then(
+            invocation -> {
+              selectQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results1);
+            });
 
     collectionReadCql =
         "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE (key = ? AND array_contains CONTAINS ?) LIMIT 3"
             .formatted(KEYSPACE_NAME, COLLECTION_NAME);
 
-    ValidatingStargateBridge.QueryAssert reReadFirstQueryAssert =
-        withQuery(
-                collectionReadCql,
-                Values.of(CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))),
-                Values.of("status " + new DocValueHasher().getHash("active").hash()))
-            .withPageSize(3)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc1"))),
-                        Values.of(tx_id2),
-                        Values.of(doc1))));
+    SimpleStatement stmt2 =
+        SimpleStatement.newInstance(
+            collectionReadCql,
+            boundKeyForStatement("doc1"),
+            "status " + new DocValueHasher().getHash("active").hash());
+    List<Row> rows2 = Arrays.asList(resultRow(0, "doc1", tx_id2, doc1));
+    AsyncResultSet results2 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows2, null);
+    final AtomicInteger reReadFirstQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt2), any(), anyInt()))
+        .then(
+            invocation -> {
+              reReadFirstQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results2);
+            });
 
-    String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
     JsonNode jsonNode = objectMapper.readTree(doc1Updated);
     WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+    SimpleStatement stmt3 = nonVectorUpdateStatement(shredDocument, tx_id1);
+    List<Row> rows3 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results3 = new MockAsyncResultSet(COLUMNS_APPLIED, rows3, null);
+    final AtomicInteger failedUpdateFirstQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt3)))
+        .then(
+            invocation -> {
+              failedUpdateFirstQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results3);
+            });
 
-    ValidatingStargateBridge.QueryAssert failedUpdateFirstQueryAssert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id1))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            // `false` in response for LWT indicate failure
-            .returning(List.of(List.of(Values.of(false))));
-
-    ValidatingStargateBridge.QueryAssert failedUpdateRetryFirstQueryAssert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id2))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            // `false` in response for LWT indicate failure
-            .returning(List.of(List.of(Values.of(false))));
+    SimpleStatement stmt4 = nonVectorUpdateStatement(shredDocument, tx_id2);
+    List<Row> rows4 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results4 = new MockAsyncResultSet(COLUMNS_APPLIED, rows4, null);
+    final AtomicInteger failedUpdateRetryFirstQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt4)))
+        .then(
+            invocation -> {
+              failedUpdateRetryFirstQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results4);
+            });
 
     jsonNode = objectMapper.readTree(doc2Updated);
     shredDocument = shredder.shred(jsonNode);
 
-    ValidatingStargateBridge.QueryAssert updateSecondQueryAssert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id3))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            .returning(List.of(List.of(Values.of(true))));
+    SimpleStatement stmt5 = nonVectorUpdateStatement(shredDocument, tx_id3);
+    List<Row> rows5 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+    AsyncResultSet results5 = new MockAsyncResultSet(COLUMNS_APPLIED, rows5, null);
+    final AtomicInteger updateSecondQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt5)))
+        .then(
+            invocation -> {
+              updateSecondQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results5);
+            });
 
     LogicalExpression implicitAnd = LogicalExpression.and();
     implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -945,11 +724,11 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
             .getItem();
 
     // assert query execution
-    selectQueryAssert.assertExecuteCount().isOne();
-    reReadFirstQueryAssert.assertExecuteCount().isEqualTo(3);
-    failedUpdateFirstQueryAssert.assertExecuteCount().isOne();
-    failedUpdateRetryFirstQueryAssert.assertExecuteCount().isEqualTo(3);
-    updateSecondQueryAssert.assertExecuteCount().isOne();
+    assertThat(selectQueryAssert.get()).isEqualTo(1);
+    assertThat(reReadFirstQueryAssert.get()).isEqualTo(3);
+    assertThat(failedUpdateFirstQueryAssert.get()).isEqualTo(1);
+    assertThat(failedUpdateRetryFirstQueryAssert.get()).isEqualTo(3);
+    assertThat(updateSecondQueryAssert.get()).isEqualTo(1);
 
     // then result
     CommandResult result = execute.get();
@@ -970,6 +749,7 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
 
   @Test
   public void findOneAndUpdateWithRetryMultipleFailure() throws Exception {
+    QueryExecutor queryExecutor = mock(QueryExecutor.class);
     String collectionReadCql =
         "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE array_contains CONTAINS ? LIMIT 3"
             .formatted(KEYSPACE_NAME, COLLECTION_NAME);
@@ -980,257 +760,135 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
     UUID tx_id4 = UUID.randomUUID();
     String doc1 =
         """
-              {
-                "_id": "doc1",
-                "username": "user1",
-                "status" : "active"
-              }
-            """;
+                  {
+                    "_id": "doc1",
+                    "username": "user1",
+                    "status" : "active"
+                  }
+                """;
 
     String doc2 =
         """
-              {
-                "_id": "doc2",
-                "username": "user2",
-                "status" : "active"
-              }
-            """;
+                  {
+                    "_id": "doc2",
+                    "username": "user2",
+                    "status" : "active"
+                  }
+                """;
 
     String doc1Updated =
         """
-              {
-                "_id": "doc1",
-                "username": "user1",
-                "status" : "active",
-                "name" : "test"
-              }
-            """;
+                  {
+                    "_id": "doc1",
+                    "username": "user1",
+                    "status" : "active",
+                    "name" : "test"
+                  }
+                """;
 
     String doc2Updated =
         """
-              {
-                "_id": "doc2",
-                "username": "user2",
-                "status" : "active",
-                "name" : "test"
-              }
-            """;
-    ValidatingStargateBridge.QueryAssert initialSelectQueryAssert =
-        withQuery(
-                collectionReadCql,
-                Values.of("status " + new DocValueHasher().getHash("active").hash()))
-            .withPageSize(3)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc1"))),
-                        Values.of(tx_id1),
-                        Values.of(doc1)),
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc2"))),
-                        Values.of(tx_id3),
-                        Values.of(doc2))));
-
+                  {
+                    "_id": "doc2",
+                    "username": "user2",
+                    "status" : "active",
+                    "name" : "test"
+                  }
+                """;
+    SimpleStatement stmt1 =
+        SimpleStatement.newInstance(
+            collectionReadCql, "status " + new DocValueHasher().getHash("active").hash());
+    List<Row> rows1 =
+        Arrays.asList(resultRow(0, "doc1", tx_id1, doc1), resultRow(0, "doc2", tx_id3, doc2));
+    AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+    final AtomicInteger selectQueryAssert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+        .then(
+            invocation -> {
+              selectQueryAssert.incrementAndGet();
+              return Uni.createFrom().item(results1);
+            });
     collectionReadCql =
         "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE (key = ? AND array_contains CONTAINS ?) LIMIT 3"
             .formatted(KEYSPACE_NAME, COLLECTION_NAME);
+    SimpleStatement stmt2 =
+        SimpleStatement.newInstance(
+            collectionReadCql,
+            boundKeyForStatement("doc1"),
+            "status " + new DocValueHasher().getHash("active").hash());
+    List<Row> rows2 = Arrays.asList(resultRow(0, "doc1", tx_id2, doc1));
+    AsyncResultSet results2 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows2, null);
+    final AtomicInteger retrySelectQueryDoc1Assert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt2), any(), anyInt()))
+        .then(
+            invocation -> {
+              retrySelectQueryDoc1Assert.incrementAndGet();
+              return Uni.createFrom().item(results2);
+            });
 
-    ValidatingStargateBridge.QueryAssert retrySelectQueryDoc1Assert =
-        withQuery(
-                collectionReadCql,
-                Values.of(CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))),
-                Values.of("status " + new DocValueHasher().getHash("active").hash()))
-            .withPageSize(3)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc1"))),
-                        Values.of(tx_id2),
-                        Values.of(doc1))));
+    SimpleStatement stmt3 =
+        SimpleStatement.newInstance(
+            collectionReadCql,
+            boundKeyForStatement("doc2"),
+            "status " + new DocValueHasher().getHash("active").hash());
+    List<Row> rows3 = Arrays.asList(resultRow(0, "doc2", tx_id4, doc2));
+    AsyncResultSet results3 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows3, null);
+    final AtomicInteger retrySelectQueryDoc2Assert = new AtomicInteger();
+    when(queryExecutor.executeRead(eq(stmt3), any(), anyInt()))
+        .then(
+            invocation -> {
+              retrySelectQueryDoc2Assert.incrementAndGet();
+              return Uni.createFrom().item(results3);
+            });
 
-    ValidatingStargateBridge.QueryAssert retrySelectQueryDoc2Assert =
-        withQuery(
-                collectionReadCql,
-                Values.of(CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc2"))),
-                Values.of("status " + new DocValueHasher().getHash("active").hash()))
-            .withPageSize(3)
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("key")
-                        .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("tx_id")
-                        .setType(TypeSpecs.UUID)
-                        .build(),
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("doc_json")
-                        .setType(TypeSpecs.VARCHAR)
-                        .build()))
-            .returning(
-                List.of(
-                    List.of(
-                        Values.of(
-                            CustomValueSerializers.getDocumentIdValue(
-                                DocumentId.fromString("doc2"))),
-                        Values.of(tx_id4),
-                        Values.of(doc2))));
-
-    String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
     JsonNode jsonNode = objectMapper.readTree(doc1Updated);
     WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+    SimpleStatement stmt4 = nonVectorUpdateStatement(shredDocument, tx_id1);
+    List<Row> rows4 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results4 = new MockAsyncResultSet(COLUMNS_APPLIED, rows4, null);
+    final AtomicInteger updateQueryDoc1Assert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt4)))
+        .then(
+            invocation -> {
+              updateQueryDoc1Assert.incrementAndGet();
+              return Uni.createFrom().item(results4);
+            });
 
-    ValidatingStargateBridge.QueryAssert updateQueryDoc1Assert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id1))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            // `false` in response for LWT indicate failure
-            .returning(List.of(List.of(Values.of(false))));
-
-    ValidatingStargateBridge.QueryAssert updateRetryQueryDoc1Assert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id2))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            // `false` in response for LWT indicate failure
-            .returning(List.of(List.of(Values.of(false))));
+    SimpleStatement stmt5 = nonVectorUpdateStatement(shredDocument, tx_id2);
+    List<Row> rows5 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results5 = new MockAsyncResultSet(COLUMNS_APPLIED, rows5, null);
+    final AtomicInteger updateRetryQueryDoc1Assert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt5)))
+        .then(
+            invocation -> {
+              updateRetryQueryDoc1Assert.incrementAndGet();
+              return Uni.createFrom().item(results5);
+            });
 
     jsonNode = objectMapper.readTree(doc2Updated);
     shredDocument = shredder.shred(jsonNode);
 
-    ValidatingStargateBridge.QueryAssert updateQueryDoc2Assert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id3))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            .returning(List.of(List.of(Values.of(false))));
+    SimpleStatement stmt6 = nonVectorUpdateStatement(shredDocument, tx_id3);
+    List<Row> rows6 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results6 = new MockAsyncResultSet(COLUMNS_APPLIED, rows6, null);
+    final AtomicInteger updateQueryDoc2Assert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt6)))
+        .then(
+            invocation -> {
+              updateQueryDoc2Assert.incrementAndGet();
+              return Uni.createFrom().item(results6);
+            });
 
-    ValidatingStargateBridge.QueryAssert updateRetryQueryDoc2Assert =
-        withQuery(
-                collectionUpdateCql,
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                Values.of(CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                Values.of(
-                    CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                Values.of(
-                    CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                Values.of(
-                    CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                Values.of(
-                    CustomValueSerializers.getTimestampMapValues(
-                        shredDocument.queryTimestampValues())),
-                Values.of(shredDocument.docJson()),
-                Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                Values.of(tx_id4))
-            .withColumnSpec(
-                List.of(
-                    QueryOuterClass.ColumnSpec.newBuilder()
-                        .setName("applied")
-                        .setType(TypeSpecs.BOOLEAN)
-                        .build()))
-            .withSerialConsistency(queriesConfig.serialConsistency())
-            .returning(List.of(List.of(Values.of(false))));
+    SimpleStatement stmt7 = nonVectorUpdateStatement(shredDocument, tx_id4);
+    List<Row> rows7 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+    AsyncResultSet results7 = new MockAsyncResultSet(COLUMNS_APPLIED, rows7, null);
+    final AtomicInteger updateRetryQueryDoc2Assert = new AtomicInteger();
+    when(queryExecutor.executeWrite(eq(stmt7)))
+        .then(
+            invocation -> {
+              updateRetryQueryDoc2Assert.incrementAndGet();
+              return Uni.createFrom().item(results7);
+            });
 
     LogicalExpression implicitAnd = LogicalExpression.and();
     implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -1276,15 +934,14 @@ public class ReadAndUpdateOperationRetryTest extends AbstractValidatingStargateB
             .getItem();
     final CommandResult commandResultSupplier = execute.get();
 
-    initialSelectQueryAssert.assertExecuteCount().isOne();
+    assertThat(selectQueryAssert.get()).isEqualTo(1);
+    assertThat(retrySelectQueryDoc1Assert.get()).isEqualTo(3);
+    assertThat(updateQueryDoc1Assert.get()).isEqualTo(1);
+    assertThat(updateRetryQueryDoc1Assert.get()).isEqualTo(3);
 
-    retrySelectQueryDoc1Assert.assertExecuteCount().isEqualTo(3);
-    updateQueryDoc1Assert.assertExecuteCount().isOne();
-    updateRetryQueryDoc1Assert.assertExecuteCount().isEqualTo(3);
-
-    retrySelectQueryDoc2Assert.assertExecuteCount().isEqualTo(3);
-    updateQueryDoc2Assert.assertExecuteCount().isOne();
-    updateRetryQueryDoc2Assert.assertExecuteCount().isEqualTo(3);
+    assertThat(retrySelectQueryDoc2Assert.get()).isEqualTo(3);
+    assertThat(updateQueryDoc2Assert.get()).isEqualTo(1);
+    assertThat(updateRetryQueryDoc2Assert.get()).isEqualTo(3);
 
     assertThat(commandResultSupplier)
         .satisfies(
